# Schedule_Bot

./: .gitattributes  .gitignore  LICENSE  README.md  _Installer.bat  _Starter.bat  _Uninstaller.bat  amvera.yml  configs.py  examples.py  main.py  pyproject.toml  requirements.txt  temp_configs.py
_Install_scripts/linux/: Schedule_Bot_Loader.service  Schedule_Bot_Loader.sh
_Install_scripts/win/: _Starter.bat  _installer&starter.bat
bot/: init_bot.py
bot/config/: .env  .env-example  .gitignore  config.py  config_loader.py
bot/configs/: config.py
bot/database/: database.py  db.py
bot/databases/: database.py
bot/exceptions/: exceptions.py
bot/filters/: filters.py
bot/handlers/: admin_handlers.py  user_handlers.py
bot/keyboards/: keyboards.py
bot/logs/: log_config.py
bot/utils/: auto_tasks.py  autosend_menu.py  colors.py  description.py  dev_menu.py  messages.py  schedule.py  schedule_logic.py  school_classes.py  states.py  status.py  utils.py
configs/: config.py  tconfig.py
temp/: calls.csv  callsutf.csv
