[tool.poetry]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = ["Jly4 <iilya.mironov@yandex.ru>"]
readme = "README.md"
packages = [{include = "schedule_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
lxml = "^4.9.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
